name:                gpsd
version:             1.0.0
synopsis:            A Haskell gateway to GPSD
-- description:
homepage:            https://github.com/CodeBlock/gpsd-haskell
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.GPSD
                     , Network.GPSD.Config
                     , Network.GPSD.Connection
                     , Network.GPSD.Lens
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >= 0.7 && < 0.8
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 1
                     , io-streams >= 1.1 && < 1.2
                     , lens >= 4 && < 5
                     , network >= 2.4 && < 3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall -Werror -threaded
