name:                gpsd
version:             1.0.0
synopsis:            A Haskell gateway to GPSD via pipes
-- description:
homepage:            https://github.com/relrod/gpsd-haskell
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.GPSD
                     , Network.GPSD.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >= 0.8 && < 0.12
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 1
                     , pipes >= 4 && < 5
                     , pipes-aeson >= 0.4 && < 0.5
                     , pipes-bytestring >= 2.1 && < 2.2
                     , pipes-network >= 0.6 && < 0.7
                     , pipes-parse >= 3 && < 4
                     , lens >= 4 && < 5
                     , network >= 2.4 && < 3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall -Werror -threaded
